        - add realpath request and implementation.
	- cancelled requests will still invoke their request callbacks.
        - add fallocate.
        - do not acquire any locks when forking.
        - incorporated some mingw32 changes by traviscline.
        - added syncfs support, using direct syscall.
        - set thread name on linux (ps -L/Hcx, top, gdb).
        - remove useless use of volatile variables.
        - fix memory leak when reaping threads.
        - use utime now uses nanosecond resolution on posix 2008 systems.
        - allow taking advantage of posix 2008 xxxat functions and fdopendir
          by implementing a working directory abstraction.
        - make readahead emulation behave more like actual readahead by never failing.
        - added EIO_LSEEK (untested).
        - added EIO_FALLOC_FL_PUNCH_HOLE.
        - wtf. etp_proc returned 0, and no compiler ever complained.
        - remove pread/pwrite emulation, as the only system that lacked them
          (cygwin) provides them for a while now.
        - provide pread/pwrite implementations for win32.
        - implement aio_realpath for windows.
        - add EIO_FALLOC_FL_COLLAPSE_RANGE and EIO_FALLOC_FL_ZERO_RANGE.
        - add EIO_FCNTL, EIO_IOCTL.
        - try to use SYMBOLIC_LINK_FLAG_ALLOW_UNPRIVILEGED_CREATE when creating
          symlinks on windows.
        - support a minimum of EIO_PATH_MIN (default: 8160) as PATH_MAX (including
          trailing 0 byte) in readlink, realpath etc.
        - generate ENAMETOOLONG if readlink overflow is detected.
        - implement support for renameat2, and corresponding flags.
        - add EIO_FALLOC_FL_INSERT_RANGE and EIO_FALLOC_FL_UNSHARE_RANGE.
        - use posix_close if available or needed.
        - save errno around close in ftruncateat, fstatvfsat and EIO_CLOSE.
        - add EIO_SLURP convenience request.
        - update configure.ac for newer autoconf/automake.
        - include sys/prctl.h if available.

